syntax = "proto3";

package authorization.v1;

option go_package="github.com/qthuy2k1/thesis-management-backend/authorization/api/v1";

service AuthorizationService {
    rpc ExtractToken(ExtractTokenRequest) returns (ExtractTokenResponse){}

    rpc Authorize(AuthorizeRequest) returns (AuthorizeResponse){}
}

message ExtractTokenRequest {
    string token = 1;
}

message ExtractTokenResponse {
    string userID = 1;
    string email = 2;
}

message AuthorizeRequest {
    string method = 1;
    string role = 2;
}

message AuthorizeResponse {
    bool canAccess = 1;
}