syntax = "proto3";

package waitingList.v1;

import "google/protobuf/timestamp.proto";

option go_package="github.com/qthuy2k1/thesis-management-backend/classroom-waiting-list/api/v1";

service WaitingListService {
    rpc CreateWaitingList(CreateWaitingListRequest) returns (CreateWaitingListResponse){
        
    }
    
    rpc GetWaitingList(GetWaitingListRequest) returns (GetWaitingListResponse){
        
    }

    rpc UpdateWaitingList(UpdateWaitingListRequest) returns (UpdateWaitingListResponse){
        
    }

    rpc DeleteWaitingList(DeleteWaitingListRequest) returns (DeleteWaitingListResponse){
        
    }

    rpc GetWaitingListsOfClassroom(GetWaitingListsRequest) returns (GetWaitingListsResponse) {
        
    }

    rpc CheckUserInWaitingListOfClassroom(CheckUserInWaitingListClassroomRequest) returns (CheckUserInWaitingListClassroomResponse) {
        
    }
}

message CommonWaitingListResponse {
    int64 statusCode = 1;
    string message = 2;
}


// ====== waitingList ======
message WaitingListInput {
    int64 classroomID = 1;
    string userID = 2;
    bool isDefense = 3;
    string status = 4;
}

message WaitingListResponse {
    int64 id = 1;
    int64 classroomID = 2;
    string userID = 3;
    bool isDefense = 4;
    string status = 5;
    google.protobuf.Timestamp createdAt = 6;
}

message CreateWaitingListRequest {
   WaitingListInput waitingList = 1;
}

message CreateWaitingListResponse {
    CommonWaitingListResponse response = 1;
}


// ====== GET ======
message GetWaitingListRequest {
    int64 id = 1;
}

message GetWaitingListResponse {
    CommonWaitingListResponse response = 1;
    WaitingListResponse waitingList = 2;
}

// ====== PUT ======
message UpdateWaitingListRequest {
    int64 id = 1;
    WaitingListInput waitingList = 2;
}

message UpdateWaitingListResponse {
    CommonWaitingListResponse response = 1;
}

// ====== DELETE ======
message DeleteWaitingListRequest {
    int64 id = 1; 
}

message DeleteWaitingListResponse {
    CommonWaitingListResponse response = 1;
}

// ====== GET ALL ======
message GetWaitingListsRequest {
    int64 classroomID = 1;
}

message GetWaitingListsResponse {
    CommonWaitingListResponse response = 1; 
    repeated WaitingListResponse waitingLists = 3;
}


// ====== CHECK USER IN WAITING LIST OF CLASSROOM ======
message CheckUserInWaitingListClassroomRequest{
    string userID = 1;
}

message CheckUserInWaitingListClassroomResponse{
    bool isIn = 1;
    int64 classroomID = 2;
}