syntax = "proto3";

package submission.v1;

import "google/api/datetime.proto";

option go_package="github.com/qthuy2k1/thesis-management-backend/submission/api/v1";

service SubmissionService {
    rpc CreateSubmission(CreateSubmissionRequest) returns (CreateSubmissionResponse){}
    
    rpc GetSubmission(GetSubmissionRequest) returns (GetSubmissionResponse){}

    rpc UpdateSubmission(UpdateSubmissionRequest) returns (UpdateSubmissionResponse){}

    rpc DeleteSubmission(DeleteSubmissionRequest) returns (DeleteSubmissionResponse){ }

    rpc GetAllSubmissionsOfExercise(GetAllSubmissionsOfExerciseRequest) returns (GetAllSubmissionsOfExerciseResponse) {}
    rpc GetSubmissionOfUser(GetSubmissionOfUserRequest) returns (GetSubmissionOfUserResponse){}
}

message CommonSubmissionResponse {
    int64 statusCode = 1;
    string message = 2;
}


// ====== submission ======
message SubmissionInput {
    string userID = 1;
    int64 exerciseID = 2;
    google.type.DateTime submissionDate = 3;
    string status = 4;
}

message SubmissionResponse {
    int64 id = 1;
    string userID = 2;
    int64 exerciseID = 3;
    google.type.DateTime submissionDate = 4;
    string status = 5;
}

message CreateSubmissionRequest {
   SubmissionInput submission = 1;
}

message CreateSubmissionResponse {
    CommonSubmissionResponse response = 1;
    int64 submissionID = 2;
}


// ====== GET ======
message GetSubmissionRequest {
    int64 id = 1;
}

message GetSubmissionResponse {
    CommonSubmissionResponse response = 1;
    SubmissionResponse submission = 2;
}

// ====== PUT ======
message UpdateSubmissionRequest {
    int64 id = 1;
    SubmissionInput submission = 2;
}

message UpdateSubmissionResponse {
    CommonSubmissionResponse response = 1;
}

// ====== DELETE ======
message DeleteSubmissionRequest {
    int64 id = 1;
}

message DeleteSubmissionResponse {
    CommonSubmissionResponse response = 1;
}

// ====== GET ALL OF EXERCISE ======
message GetAllSubmissionsOfExerciseRequest {
    int64 exerciseID = 1;
}

message GetAllSubmissionsOfExerciseResponse {
    CommonSubmissionResponse response = 1;
    int64 totalCount = 2;
    repeated SubmissionResponse submissions = 3;
}

message GetSubmissionOfUserRequest {
    string userID = 1;
    int64 exerciseID = 2;
}


message GetSubmissionOfUserResponse {
    CommonSubmissionResponse response = 1;
    SubmissionResponse submission = 2;
}